--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
-        
+
         <nav class="nav container">
 
             <a href="#" class="nav__logo">
@@ -74,6 +74,61 @@
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home section" id="home">
+            
+            <img src="assets/img/home-lines-bg.svg" alt="image" class="home__lines">
+
+            <div class="home__container container grid">
+
+                <div class="home__content grid">
+
+                    <div class="home__data">
+
+                        <h1 class="home__title">
+                            Create The <br>
+                            Constructions <br>
+                            You Want Here
+                        </h1><!--home__title-->
+
+                        <p class="home__description">
+                            We provide the best home design, construction and
+                            maintenance services for you and your family.
+                        </p><!--home__description-->
+
+
+                        <div class="home__buttons">
+                            <a href="#services" class="button">Our Services</a>
+
+                            <a href="#projects" class="button__link">
+                                <span>View Projects</span>
+                                <i class="ri-arrow-right-line"></i>
+                            </a><!--button__link-->
+
+                        </div><!--home__buttons-->
+
+                    </div><!--home__data-->
+
+                    <div class="home__info">
+                        <div>
+                            <h3 class="home__info-title">10+</h3>
+                            <p class="home__info-description">Years of <br> Experience</p>
+                        </div>
+
+                        <div>
+                            <h3 class="home__info-title">200</h3>
+                            <p class="home__info-description">Complete <br> Projects</p>
+                        </div>
+                    </div><!--home__info-->
+
+                </div><!--home__content-->
+
+                <div class="home__images">
+                    <img src="assets/img/about-img-1.png" class="home__img-1" alt="image">
+                    <img src="assets/img/about-img-2.png" class="home__img-2" alt="image">
+                </div><!--home__images-->
+
+
+
+            </div><!--home__container container grid-->
 
         </section><!--home section-->
 
