feat(ui): Add About Section.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home section" id="home">
-            
+
             <img src="assets/img/home-lines-bg.svg" alt="image" class="home__lines">
 
             <div class="home__container container grid">
@@ -134,6 +134,58 @@
 
         <!--==================== ABOUT ====================-->
         <section class="about section" id="about">
+
+            <div class="about__container container grid">
+
+                <div class="about__data">
+
+                    <span class="section__subtitle">ABOUT US
+                    </span>
+
+                    <h2 class="section__title">
+                        We Provide The Best <br> Service To Build
+                    </h2><!--section__title-->
+
+                    <p class="about__description">
+                        We strive to provide the best professionals
+                        to make your project a construction masterpiece,
+                        something unique and unmatched.
+                    </p><!--about-description-->
+
+                    <ul class="about__list grid">
+
+                        <li class="about__list-item">
+                            <i class="ri-checkbox-circle-line"></i>
+                            <span>Professional workers</span>
+                        </li><!--about-list-item-->
+
+                        <li class="about__list-item">
+                            <i class="ri-checkbox-circle-line"></i>
+                            <span>Guaranteed quality</span>
+                        </li><!--about-list-item-->
+
+                        <li class="about__list-item">
+                            <i class="ri-checkbox-circle-line"></i>
+                            <span>Extensive experience</span>
+                        </li><!--about-list-item-->
+
+                        <li class="about__list-item">
+                            <i class="ri-checkbox-circle-line"></i>
+                            <span>We quote your project</span>
+                        </li><!--about-list-item-->
+
+                    </ul><!--about__list grid-->
+
+                    <a href="#projects" class="button">View Projects</a>
+                </div><!--about__data-->
+
+
+                <div class="about__images">
+                    <img src="assets/img/about-img-1.png" class="about__img-1" alt="image">
+                    <img src="assets/img/about-img-2.png" class="about__img-2" alt="image">
+                </div><!--about__images-->
+
+            </div><!--about__container-container-grid-->
 
         </section><!--about section-->
 
