--- a/index.html
+++ b/index.html
@@ -192,6 +192,121 @@
         <!--==================== SERVICES ====================-->
         <section class="services section" id="services">
 
+            <div class="services__container container grid">
+
+                <div class="services__data">
+                    <div>
+                        <span class="section__subtitle">OUR SERVICES</span>
+                        <h2 class="section__title">High Quality <br> Construction Services</h2>
+                    </div>
+
+                    <p class="services__description">
+                        We provide multiple services for you, offering
+                        confidence and security in construction.
+                    </p><!--services__description-->
+
+                    <a href="#contact" class="button">Contact Now</a>
+                </div><!--services__data-->
+
+                <div class="services__swiper swiper">
+
+                    <div class="swiper-wrapper">
+
+                        <article class="services__card swiper-slide">
+                            <div class="services__icon">
+                                <i class="ri-building-line"></i>
+                            </div><!--services__icon-->
+
+                            <h3 class="services__title">
+                                Housing <br> Construction
+                            </h3><!--services__title-->
+
+                            <p>
+                                We build with the best professionals
+                                and high-quality work for a safe and
+                                effective home.
+                            </p>
+                        </article><!--services__card-->
+
+                        <article class="services__card swiper-slide">
+                            <div class="services__icon">
+                                <i class="ri-home-office-line"></i>
+                            </div><!--services__icon-->
+
+                            <h3 class="services__title">
+                                Construction Of <br> Home Areas
+                            </h3><!--services__title-->
+
+                            <p>
+                                We build with the best professionals
+                                and high-quality work for a safe and
+                                effective home.
+                            </p>
+                        </article><!--services__card-->
+
+                        <article class="services__card swiper-slide">
+                            <div class="services__icon">
+                                <i class="ri-tools-line"></i>
+                            </div><!--services__icon-->
+
+                            <h3 class="services__title">
+                                Maintenance & <br> Repair
+                            </h3><!--services__title-->
+
+                            <p>
+                                We build with the best professionals
+                                and high-quality work for a safe and
+                                effective home.
+                            </p>
+                        </article><!--services__card-->
+
+                        <article class="services__card swiper-slide">
+                            <div class="services__icon">
+                                <i class="ri-box-3-line"></i>
+                            </div><!--services__icon-->
+
+                            <h3 class="services__title">
+                                Installation Of <br> ceramics & Others
+                            </h3><!--services__title-->
+
+                            <p>
+                                We build with the best professionals
+                                and high-quality work for a safe and
+                                effective home.
+                            </p>
+                        </article><!--services__card-->
+
+                        <article class="services__card swiper-slide">
+                            <div class="services__icon">
+                                <i class="ri-drop-line"></i>
+                            </div><!--services__icon-->
+
+                            <h3 class="services__title">
+                                Water & Drainage <br> Installation
+                            </h3><!--services__title-->
+
+                            <p>
+                                We build with the best professionals
+                                and high-quality work for a safe and
+                                effective home.
+                            </p>
+                        </article><!--services__card-->
+
+                    </div>
+
+                </div><!--services__swiper-->
+
+                <!-- Navigation Button -->
+                <div class="swiper-button-prev">
+                    <i class="ri-arrow-left-line"></i>
+                </div><!--swiper-button-prev-->
+
+                <div class="swiper-button-next">
+                    <i class="ri-arrow-right-line"></i>
+                </div><!--swiper-button-next-->
+            </div><!--services__container container grid-->
+
+            <div class="services__shape"></div><!--services__shape-->
         </section><!--services section-->
 
         <!--==================== PROJECTS ====================-->
@@ -220,7 +335,7 @@
     <script src=""></script>
 
     <!--=============== SWIPER JS ===============-->
-    <script src=""></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
 
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
