--- a/index.html
+++ b/index.html
@@ -311,7 +311,64 @@
 
         <!--==================== PROJECTS ====================-->
         <section class="projects section" id="projects">
+            <span class="section__subtitle">
+                OUR PROJECTS
+            </span><!--section__subtitle-->
 
+            <h2 class="section__title">
+                Latest Completed <br> Projects
+            </h2><!--section__title-->
+
+            <div class="projects__container container grid">
+
+                <article class="projects__card">
+                    <img src="assets/img/projects-img-1.png" class="projects__img" alt="image">
+
+                    <div class="projects__data">
+                        <span>House construction</span>
+                        <h2 class="projects__title">Two Story House</h2>
+                        <span class="projects__date"">January 15, 2024</span>
+
+                        <p>
+                            Construction of a two-story house with columns,
+                            foundations, floor, ceilings and others.
+                        </p>
+                    </div><!--projects__data-->
+                </article><!--projects__card-->
+
+                <article class=" projects__card">
+                            <img src="assets/img/projects-img-2.png" class="projects__img" alt="image">
+
+                            <div class="projects__data">
+                                <span>Maintenance & Repair</span>
+                                <h2 class="projects__title">Stairs & Columns</h2>
+                                <span class="projects__date"">May 21, 2024</span>
+
+                        <p>
+                            Construction of a two-story house with columns,
+                            foundations, floor, ceilings and others.
+                        </p>
+                    </div><!--projects__data-->
+                </article><!--projects__card-->
+
+                <article class=" projects__card">
+                                    <img src="assets/img/projects-img-3.png" class="projects__img" alt="image">
+
+                                    <div class="projects__data">
+
+                                        <span>Construction Of Home Areas</span>
+                                        <h2 class="projects__title">kitchen Room</h2>
+                                        <span class="projects__date">July 03, 2024</span>
+
+                                        <p>
+                                            Construction of a two-story house with columns,
+                                            foundations, floor, ceilings and others.
+                                        </p>
+
+                                    </div><!--projects__data-->
+                </article><!--projects__card-->
+
+            </div><!--projects__container container grid-->
         </section><!--projects section-->
 
         <!--==================== CONTACT ====================-->
