--- a/index.html
+++ b/index.html
@@ -373,7 +373,80 @@
 
         <!--==================== CONTACT ====================-->
         <section class="contact section" id="contact">
+            <div class="container">
+                <span class="section__subtitle">CONTACT ME
+                </span><!--section__subtitle-->
 
+                <h2 class="section__title">Write To Us & Build</h2>
+
+                <div class="contact__container grid">
+                    <img src="assets/img/contact-img.png" class="contact__img" alt="image">
+
+                    <div class="contact__data grid">
+                        <div class="contact__card">
+
+                            <div class="contact__icon">
+                                <i class="ri-map-pin-2-line"></i>
+                            </div><!--contact__icon-->
+
+                            <h3 class="contact__title">
+                                I'm here
+                            </h3><!--contact__title-->
+
+                            <address class="contact__info">
+                                Peru - Lima <br>
+                                Av.Moon #321
+                            </address><!--contact__info-->
+                        </div><!--contact__card-->
+
+
+                        <div class="contact__card">
+
+                            <div class="contact__icon">
+                                <i class="ri-phone-line"></i>
+                            </div><!--contact__icon-->
+
+                            <h3 class="contact__title">
+                                Talk to me
+                            </h3><!--contact__title-->
+
+                            <address class="contact__info">
+                                +00-987-7654-321 <br>
+                                +11-012345
+                            </address><!--contact__info-->
+                        </div><!--contact__card-->
+
+                        <div class="contact__card">
+
+                            <div class="contact__icon">
+                                <i class="ri-message-3-line"></i>
+                            </div><!--contact__icon-->
+
+                            <h3 class="contact__title">
+                                Chat with me
+                            </h3><!--contact__title-->
+
+                            <div class="contact__social">
+
+                                <a href="#" target="_blank" class="contact__social-link">
+                                    <i class="ri-whatsapp-line"></i>
+                                </a><!--contact__social-link-->
+
+                                <a href="#" target="_blank" class="contact__social-link">
+                                    <i class="ri-messenger-line"></i>
+                                </a><!--contact__social-link-->
+
+                                <a href="#" target="_blank" class="contact__social-link">
+                                    <i class="ri-telegram-line"></i>
+                                </a><!--contact__social-link-->
+
+                            </div><!--contact__social-->
+                        </div><!--contact__card-->
+
+                    </div><!--contact__data grid-->
+                </div><!--contact__container grid-->
+
+            </div><!--container-->
         </section><!--contact section-->
     </main><!--main-->
 
