--- a/index.html
+++ b/index.html
@@ -452,6 +452,82 @@
 
     <!--==================== FOOTER ====================-->
     <footer class="footer">
+        <div class="footer__container container grid">
+            <div>
+                <a href="#" class="footer__logo">
+                    <i class="ri-building-3-line"></i>
+                    <span>Construct</span>
+                </a><!--footer__logo-->
+
+                <p class="footer__description">We build security <br> and trust in homes.
+                </p><!--footer__description-->
+
+                <address class="footer__email">Email: construct123@email.com
+                </address><!--footer__email-->
+            </div>
+
+            <div class="footer__content grid">
+
+                <div>
+
+                    <h3 class="footer__title">Company</h3>
+
+                    <ul class="footer__links">
+                        <li><a href="#about" class="footer__link"> About Us</a></li>
+                        <li><a href="#services" class="footer__link"> Services</a></li>
+                        <li><a href="#projects" class="footer__link"> Projects</a></li>
+                    </ul><!--footer__links-->
+
+                </div>
+
+                <div>
+
+                    <h3 class="footer__title">Information</h3>
+
+                    <ul class="footer__list">
+                        <li>
+                            <address class="footer__info">
+                                Peru - Lima <br> Av.Moon #321
+                            </address><!--footer__info-->
+                        </li>
+
+                        <li>
+                            <address class="footer__info">
+                                9AM - 11PM
+                            </address><!--footer__info-->
+                        </li>
+                    </ul><!--footer__links-->
+
+                </div>
+
+                <div>
+
+                    <h3 class="footer__title">Social Media</h3>
+
+                    <div class="footer__social">
+
+                        <a href="#" class="footer__social-link" target="_blank">
+                            <i class="ri-facebook-circle-line"></i>
+                        </a><!--footer__social-link-->
+
+                        <a href="#" class="footer__social-link" target="_blank">
+                            <i class="ri-instagram-line"></i>
+                        </a><!--footer__social-link-->
+
+                        <a href="#" class="footer__social-link" target="_blank">
+                            <i class="ri-twitter-x-line"></i>
+                        </a><!--footer__social-link-->
+
+                    </div><!--footer__links-->
+
+                </div>
+
+            </div><!--footer__content grid-->
+        </div><!--footer__container container grid-->
+
+        <span class="footer__copy">
+            &#169; All Rights Reserved
+        </span><!--footer__copy-->
 
     </footer><!--footer-->
 
