feat(ui): Add Scroll Up button.

--- a/index.html
+++ b/index.html
@@ -534,7 +534,9 @@
 
 
     <!--========== SCROLL UP ==========-->
-
+    <a href="#" id="scroll-up" class="scrollup">
+        <i class="ri-arrow-up-line"></i>
+    </a><!--scroll-up-->
 
 
     <!--=============== SCROLLREVEAL ===============-->
