feat(responsive): add CSS media queries for responsive design.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                 <div class="home__images">
                     <img src="assets/img/about-img-1.png" class="home__img-1" alt="image">
-                    <img src="assets/img/about-img-2.png" class="home__img-2" alt="image">
+                    <img src="assets/img/home-img-2.png" class="home__img-2" alt="image">
                 </div><!--home__images-->
 
 
